crates/pg_syntax/tests/snapshots/postgres_regress/tsdicts@82.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT ts_lexize('synonym', 'PoStGrEs');"
---
SelectStmt@0..40
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..38
    FuncCall@7..38
      Ident@7..16 "ts_lexize"
      Ascii40@16..17 "("
      AConst@17..26
        Sconst@17..26 "'synonym'"
      Ascii44@26..27 ","
      Whitespace@27..28 " "
      AConst@28..38
        Sconst@28..38 "'PoStGrEs'"
  Ascii41@38..39 ")"
  Ascii59@39..40 ";"

