crates/pg_syntax/tests/snapshots/postgres_regress/tsdicts@89.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT ts_lexize('thesaurus', 'one');"
---
SelectStmt@0..37
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..35
    FuncCall@7..35
      Ident@7..16 "ts_lexize"
      Ascii40@16..17 "("
      AConst@17..28
        Sconst@17..28 "'thesaurus'"
      Ascii44@28..29 ","
      Whitespace@29..30 " "
      AConst@30..35
        Sconst@30..35 "'one'"
  Ascii41@35..36 ")"
  Ascii59@36..37 ";"

