crates/pg_syntax/tests/snapshots/postgres_regress/tsdicts@9.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT ts_lexize('ispell', 'rebook');"
---
SelectStmt@0..37
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..35
    FuncCall@7..35
      Ident@7..16 "ts_lexize"
      Ascii40@16..17 "("
      AConst@17..25
        Sconst@17..25 "'ispell'"
      Ascii44@25..26 ","
      Whitespace@26..27 " "
      AConst@27..35
        Sconst@27..35 "'rebook'"
  Ascii41@35..36 ")"
  Ascii59@36..37 ";"

