crates/pg_syntax/tests/snapshots/postgres_regress/tsrf@22.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT few.dataa, count(*), min(id), max(id), unnest('{1,1,3}'::int[]) FROM few WHERE few.id = 1 GROUP BY few.dataa, 5;"
---
SelectStmt@0..119
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..16
    ColumnRef@7..16
      Ident@7..10 "few"
      Ascii46@10..11 "."
      Ident@11..16 "dataa"
  Ascii44@16..17 ","
  Whitespace@17..18 " "
  ResTarget@18..25
    FuncCall@18..25
      Ident@18..23 "count"
      Ascii40@23..24 "("
      Ascii42@24..25 "*"
  Ascii41@25..26 ")"
  Ascii44@26..27 ","
  Whitespace@27..28 " "
  ResTarget@28..34
    FuncCall@28..34
      Ident@28..31 "min"
      Ascii40@31..32 "("
      ColumnRef@32..34
        Ident@32..34 "id"
  Ascii41@34..35 ")"
  Ascii44@35..36 ","
  Whitespace@36..37 " "
  ResTarget@37..43
    FuncCall@37..43
      Ident@37..40 "max"
      Ascii40@40..41 "("
      ColumnRef@41..43
        Ident@41..43 "id"
  Ascii41@43..44 ")"
  Ascii44@44..45 ","
  Whitespace@45..46 " "
  ResTarget@46..67
    FuncCall@46..67
      Ident@46..52 "unnest"
      Ascii40@52..53 "("
      TypeCast@53..67
        AConst@53..62
          Sconst@53..62 "'{1,1,3}'"
        Typecast@62..64 "::"
        TypeName@64..67
          IntP@64..67 "int"
  Ascii91@67..68 "["
  Ascii93@68..69 "]"
  Ascii41@69..70 ")"
  Whitespace@70..71 " "
  From@71..75 "FROM"
  Whitespace@75..76 " "
  RangeVar@76..79
    Ident@76..79 "few"
  Whitespace@79..80 " "
  Where@80..85 "WHERE"
  Whitespace@85..86 " "
  AExpr@86..96
    ColumnRef@86..92
      Ident@86..89 "few"
      Ascii46@89..90 "."
      Ident@90..92 "id"
    Whitespace@92..93 " "
    Ascii61@93..94 "="
    Whitespace@94..95 " "
    AConst@95..96
      Iconst@95..96 "1"
  Whitespace@96..97 " "
  GroupP@97..102 "GROUP"
  Whitespace@102..103 " "
  By@103..105 "BY"
  Whitespace@105..106 " "
  ColumnRef@106..115
    Ident@106..109 "few"
    Ascii46@109..110 "."
    Ident@110..115 "dataa"
  Ascii44@115..116 ","
  Whitespace@116..117 " "
  AConst@117..118
    Iconst@117..118 "5"
  Ascii59@118..119 ";"

